--- a/feedme/css/success.css
+++ b/feedme/css/success.css
@@ -1,10 +1,8 @@
-
-
 html {
     background: none;
 }
 
-body {
+.wrapper {
     background-color: #ffe99d;
 }
 
